--- a/index.html
+++ b/index.html
@@ -3,27 +3,52 @@
   <head>
     <meta charset="utf-8">
     <title>ajax-ex-calendar</title>
-
+    <!-- CSS -->
     <link rel="stylesheet" href="css/style1.css">
-
+    <!-- Fontawesome -->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+    <!-- JQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- Moment -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+    <!-- Moment in italiano -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/locale/it.min.js"></script>
+    <!-- Handlebars -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.7.6/handlebars.min.js"></script>
-
-    <script type="text/javascript" src="js/script.js"></script>
-
+    <!-- Template -->
+    <script id="template-titolo" type="text/x-handlebars-template">
+      <h1> {{mese}} - {{anno}}</h1>
+    </script>
     <script id="template-mese" type="text/x-handlebars-template">
       <li data-id={{data}}>{{value}}</li>
     </script>
+    <!-- JavaScript -->
+    <script type="text/javascript" src="js/script.js"></script>
   </head>
   <body>
-    <h1> Gennaio- 2018</h1>
 
-    <ul id="giorni-mese">
+      <div class="precedente">
+        <i class="fas fa-angle-left"></i>
+      </div>
+      <div class="contenitore">
+        <div id="titolo">
+          <h1></h1>
+        </div>
 
-    </ul>
+        <ul id="giorni-mese">
 
+        </ul>
+    </div>
+      <div class="successivo">
+        <i class="fas fa-angle-right"></i>
+      </div>
+
+
+
+
+    <div class="dati-inesistenti invisibile">
+      <h1>DATI NON DISPONIBILI</h1>
+    </div>
 
   </body>
 </html>
