Lc ajax-ex-calendar corretto1

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       </div>
     </script>
     <!-- JavaScript -->
-    <script type="text/javascript" src="js-bonus/script-bonus.js"></script>
+    <script type="text/javascript" src="js-bonus/script.js"></script>
   </head>
   <body>
 
